[package]
name = "creek"
version = "0.1.0"
edition = "2024"

[lib]
name = "creek"
path = "src/lib.rs"

[features]
default = ["desktop", "vulkan"]
desktop = ["winit"]
embedded = []
vulkan = ["ash"]

[dependencies]
# winit can be optional
winit = { version = "0.28", optional = true }
ash = { version = "0.37", optional = true }
