[package]
name = "creek"
version = "0.1.0"
edition = "2024"

[lib]
name = "creek"
path = "src/lib.rs"

[features]
default = ["desktop"]
desktop = ["winit", "vulkan", "lua"]
embedded = []
vulkan = ["ash"]
lua = ["mlua"]

[dependencies]
# winit can be optional
winit = { version = "0.28", optional = true }
ash = { version = "0.37", optional = true }
mlua = { version = "0.9", features = ["luajit"], optional = true }
